<resources>
    <string name="app_name">Waras</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="login_now">Login Now</string>
    <string name="logo">Logo</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="login_success">Login Success</string>
    <string name="next">Next</string>
    <string name="login_error">Login Error</string>
    <string name="repeat">Repeat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_new_account">Register New Account</string>
    <string name="success">Success</string>
    <string name="your_account_created">Your account successfully created</string>
    <string name="sorry">Oops</string>
    <string name="create_account_failed">We have an error while creating your account %1$s</string>
    <string name="input_image">Input Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="save">Save Changes</string>
    <string name="Telp">Telp Number</string>
    <string name="rating">Rating Apps</string>
    <string name="saran">Saran</string>
    <string name="submit">Submit</string>
    <string name="no_permission">not getting permission</string>
    <string name="choose">Choose a Picture</string>
    <string name="date_formate">yyyy-MM-dd</string>
    <string name="theme">Theme</string>
    <string name="enter_name">Name must be filled out</string>
    <string name="enter_password">Password must be filled out</string>
    <string name="enter_email">Enter an email address</string>
    <string name="enter_username">Username must be filled out</string>
    <string name="enter_date">Date must be filled out</string>
    <string name="enter_tel">Telephone must be filled out</string>
    <string name="edit_profile_success">Edit Profile Success</string>
    <string name="enter_current_pass">Current Password must be filled</string>
    <string name="enter_new_pass">New Password must be filled</string>
    <string name="enter_repeat_pass">Repeat New Password must be filled</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="check_new_password">New Password Cannot be same as current password</string>
    <string name="valid_equal_password">Repeat password must be equals to New Password</string>
    <string name="change_password_success">Change Password Success</string>
    <string name="no_whitespace">No Whitespaces are allowed</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_telephone_number">Enter your Telephone Number</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="verification_error">Wrong Data! Verification Failed</string>
    <string name="verification_success">Verification Successful! You will be redirect to Reset Password Page</string>
    <string name="login_to_your_personal_account">Login to your personal account</string>
    <string name="current_password">Current Password</string>
    <string name="validate_email">Please enter a valid email address</string>
    <string name="validate_password">Password must be 6 characters or more</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_feedback">Feedback </string>
    <string name="title_change_password">Change Password </string>
    <string name="title_history">History </string>
    <string name="title_diagnose">Diagnose </string>
    <string name="title_article">Article </string>
    <string name="title_profile">Profile </string>
    <string name="title_setting">Setting </string>
    <string name="language_page">Language</string>
    <string name="title_theme_setting">Theme Setting</string>
    <string name="login_area">Login Area</string>
    <string name="register_area">Register Area</string>
    <string name="forgot_password_area">Forgot Password Area</string>
    <string name="verification_data">Verification Data</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_recommendation">Recommendation List</string>
    <string name="title_detail_history">Detail History</string>
    <string name="title_hospital">Nearby Hospital</string>
    <string name="landing1">Welcome to WARAS</string>
    <string name="landing2">Detecting Covid-19 Symptoms and Diagnosis</string>
    <string name="landing3">Presenting Recommendations During Quarantine and Health Articles</string>
    <string name="start">Start Now</string>
    <string name="email_to">Email to </string>
    <string name="mail_to">mailto</string>
    <string name="send_email">Send email</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="previous">Previous</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="Confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="your_progress">Your Progress</string>
    <string name="your_recommendations">Recommendations</string>
    <string name="start_diagnose_now">Start Diagnose now</string>
    <string name="news_images">News Images</string>
    <string name="diagnose1">Do you feel fever?</string>
    <string name="diagnose2">Do you feel cough?</string>
    <string name="diagnose3">Do you feel tired?</string>
    <string name="diagnose4">Do you have a sore throat?</string>
    <string name="diagnose5">Do you feel a runny nose?</string>
    <string name="diagnose6">Do you feel short of breath?</string>
    <string name="diagnose7">Do you feel vomiting?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hai">Hai</string>
    <string name="permisssion1">We will ask some questions regarding the complaints you feel,</string>
    <string name="permission2">Are you willing?</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="years_old">%1$s years old</string>
    <string name="notification">Notification</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="ayoo">Ayoo Olahraga</string>
    <string name="alarm_setup">Repeating alarm set up</string>
    <string name="alarm_canceled">Repeating alarm canceled</string>
    <string-array name="data_name">
        <item>Aprillia Anggera Putri Lestari</item>
        <item>Alfendio Alif Faudisyah</item>
        <item>Yulius</item>
        <item>Kartika Okta Rachmawati</item>
        <item>Alextonio Winatian</item>
        <item>Melina Azzahra</item>
    </string-array>
    <string-array name="data_email">
        <item>M2007F0763@bangkit.academy</item>
        <item>M2245F2171@bangkit.academy</item>
        <item>A7245F2166@bangkit.academy</item>
        <item>A7007F0761@bangkit.academy</item>
        <item>C7011F1157@bangkit.academy</item>
        <item>C2007F0650@bangkit.academy</item>
    </string-array>
    <string-array name="data_recommendation">
        <item>Selalu memakai masker dan membuang masker bekas di tempat yang ditentukan</item>
        <item>Jika sakit (ada gejala demam, flu dan batuk), maka tetap di rumah. Jangan pergi bekerja, sekolah, ke pasar atau ke ruang publik untuk mencegah penularan masyarakat</item>
        <item>Manfaatkan fasilitas telemedicine atau sosial media kesehatan dan hindari transportasi publik.</item>
        <item>Beritahu dokter dan perawat tentang keluhan dan gejala, serta riwayat bekerja ke daerah terjangkit atau kontak dengan pasien COVID-19</item>
        <item>Selama di rumah, bisa bekerja di rumah. Gunakan kamar terpisah dari anggota keluarga lainnya, dan jaga jarak 1 meter dari anggota keluarga</item>
        <item>Tentukan pengecekan suhu harian, amati batuk dan sesak nafas.</item>
        <item>Hindari pemakaian bersama peralatan makan dan mandi dan tempat tidur.</item>
        <item>Terapkan perilaku hidup sehat dan bersih, serta konsumsi makanan bergizi, mencuci tangan dengan sabun dan air mengalir dan lakukan etika batuk dan bersin.</item>
        <item>Jaga kebersihan dan kesehatan rumah dengan cairan desinfektan.</item>
        <item>Selalu berada di ruang terbuka dan berjemur di bawah sinar matahari setiap pagi (15 sampai 30 menit)</item>
        <item>Hubungi segera fasilitas pelayanan kesehatan jika sakit berlanjut seperti sesak nafas dan demam tinggi, untuk mendapatkan perawatan lebih lanjut.</item>
    </string-array>
    <string-array name="select_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="result_diagnose">Diagnose Result</string>
    <string name="result_text">Your Days to Heal is %1$s Days</string>
    <string name="detail_history_text1">Below is the list of your symptoms</string>
    <string name="send_report">Send Report</string>
    <string name="text_predict">Based on your symptoms, our system has predict that you will recover in %1$s days</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="title_report">Reports</string>
    <string name="title_daily_report">Daily Reports</string>
    <string name="how_are_you_currently">How are you currently?</string>
    <string name="already_recovered">Already Recovered</string>
    <string name="still_sick">Still sick</string>
    <string name="more">More ▶</string>
    <string name="send_daily_report">Send Daily Report</string>
    <string name="estimated_recover_date">Estimated Recover Date:</string>
    <string name="diagnose_date">Diagnose Date:</string>
    <string name="this_is_the_result_of_your_diagnose">This is the result of your diagnose</string>
    <string name="daily_report">Daily Report</string>
    <string name="what_do_you_feel_today">What do you feel today?</string>
    <string name="make_a_daily_report">Make a daily report</string>
    <string name="daily_report_title">Daily Report %1$s</string>
    <string name="today_i_feel">Today, I feel ..</string>
    <string name="see_all">See All</string>
    <string name="wrong_date_of_birth">The date of birth cannot exceed the current date</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="registration_success">Registration Success</string>
    <string name="user_found_error">Username doesn\'t available, Please change your username</string>
    <string name="email_found_error">Email not available, Please change to another email</string>
    <string name="add_report_success">Add Report Success</string>
    <string name="add_report_failed">Add Report Failed</string>
    <string name="you_already_recover">You are already recover</string>
    <string name="have_not_submitted_daily_report">Hi, you haven\'t submitted the daily report yet. tell me how you feel today</string>
    <string name="diagnose_id">Diagnose - %1$s</string>
    <string name="default_map">Default Map</string>
    <string name="terrain_map">Terrain Map</string>
</resources>