<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_area"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/primaryBlueLight"
        android:layout_marginHorizontal="32dp"
        android:alpha="0"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_personal_account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:alpha="0"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.yulius.warasapp.ui.custom_views.EditTextName
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/bg_edittext"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:drawablePadding="12dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subTitle"/>

    <com.yulius.warasapp.ui.custom_views.EditTextPassword
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/bg_edittext"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:drawablePadding="12dp"
        android:layout_marginTop="12dp"
        android:alpha="0"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"/>

    <TextView
        android:id="@+id/tv_forgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="viewEnd"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:alpha="0"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="36dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/tv_forgotPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:text="@string/new_user"
        android:textSize="18sp"
        android:alpha="0"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />
    <TextView
        android:id="@+id/tv_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:alpha="0"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_txtRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>